# neron

./: -vim  .swn  .swo  .swp  CMakeLists.txt  Debug  Makefile  README  README.md  Release  \  clean_build.sh  linux_debug_build.sh
algo_test/: circle_intersection.sce
algo_test/code_bloks_test/general_geometry_test/geometry_general_test/: geometry_general_test (pocketAssistant's conflicted copy 2012-07-26).depend  geometry_general_test.cbp  geometry_general_test.depend  geometry_general_test.layout  main.cpp
algo_test/code_bloks_test/opencv_geometry_test/opencv_general/using_opencv_test/: main.cpp  using_opencv_test.cbp  using_opencv_test.depend  using_opencv_test.layout
algo_test/ran_generation/random_generation/: main.cpp  random_generation.cbp
builds/: linux_debug_build.sh
builds/product/debug/: CMakeCache.txt  Makefile  cmake_install.cmake
builds/product/debug/EXECUTABLE_OUTPUT_PATH/: Makefile  cmake_install.cmake
builds/product/debug/include/: .probabilistic_point.h.swp
builds/product/debug/include/map/: map.h
builds/product/debug/include/neuron/: base_neuron.h  output_reaction.h  sense_agent.h
builds/product/debug/include/util/: logger.h
builds/product/debug/include/util/geometry/: geometry.h
builds/product/debug/include/util/math/: math.h  probabilistic_point.h
cmake/: hellow_world.cmake
doc/: TinyXML_example.txt  doc.odt  linkTeacher.odt  map.txt  mapsplit.txt  task.txt  task_for_map.txt  task_test.txt
include/: base_body.h  base_link.h  geometry.h  geometry_drow.h  geometry_drow.hpp  logger.h  math.h  probabilistic_functions.h  probabilistic_point.h  smooth_signal.h
include/map/: map.h  map_path.h  xml_storage.h
include/neuron/: base_neuron.h  link_agent.h  neuron.h
include/util/: .saveToXML.h.swp  saveToXML.h
include/util/geometry/: geometry.h  geometry_drow.h  geometry_transformation.h
include/util/math/: math.h  probabilistic_functions.h
other/: CMakeLists.txt
other/tinyxml/: CMakeLists.txt  tinyxml.h
src/: main.cpp
src/agents/: base_neuron.cpp  neuron.cpp  output_agent.cpp  sense_agent.cpp
src/links/: link_agent.cpp
src/map/: .vector_map_cell.cpp.swp  vector_map_cell.cpp  xml_storage.cpp  xml_storage.h
src/util/: .saveToXML.cpp.swp  math_polinom.cpp  math_sort.cpp  saveToXML.cpp  smooth_signal.cpp
src/util/geometry/: .geometry_transformation.cpp.swp  .interval_shape.cpp.swp  .util.cpp.swp  2d_line_shape.cpp  circle_shape.cpp  contour_shape.cpp  convex_contour_shape.cpp  geometry.cpp  geometry_defines.cpp  geometry_transformation.cpp  intersection_shape.cpp  interval_shape.cpp  rectangle_shape.cpp  show_shape.cpp  triangle_shape.cpp  util.cpp
src/util/math/: math_equal.cpp  math_polinom.cpp  math_sort.cpp  probabilistic_functions.cpp  smooth_signal.cpp
tests/geometry/circle/: circle_drow_test.cpp
tests/geometry/contour/: contour_drow_test.h  createSamples.cpp  drowAndTurn.cpp  drowAndTurn.h
tests/geometry/interval/: interval_drow_test.cpp
tests/geometry/line/: line_drow_test.cpp  line_drow_test.h
tests/geometry/turn_test/: .swp  CMakeLists.txt  turn_shape_main.cpp
tests/geometry/turn_test/src/: circle_drow_test.h  line_drow_test.h
tests/map/create_map_test/: create_map_test.cpp
tests/util/: .swp
tests/util/geometry/general_test_src/: \  create_test_shape.cpp  create_test_shape.h
tests/util/geometry/shadow_test/: CMakeLists.txt  shadow_test.cpp
tests/util/geometry/turn_test/: CMakeLists.txt  turn_shape_main.cpp
tests/util/geometry/turn_test/src/: circle_drow_test.cpp  circle_drow_test.h  contour_drow_test.cpp  contour_drow_test.h  line_drow_test.cpp
tests/util/math/probabilistic_law_build/: CMakeLists.txt  prob_law_build.cpp  probabilisic_build.cbp  probabilisic_build.depend  probabilisic_build.layout
tests/util/xml_parser/: xml_save.cpp
